# starter-template-fastapi

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  alembic.ini  dependencies.py  docker-compose.yml  hex-design-guide.md  main.py  problem_details.py  pyproject.toml  renovate.json  settings.py  skills-lock.json
.claude/: settings.json
.claude/agent-memory/implementer/: MEMORY.md  project_roadmap_etapa_i.md  project_settings_field_removal_ripples.md  project_settings_literal_validation_order.md
.claude/agent-memory/orchestrator/: MEMORY.md  feedback_default_to_recommended.md  project_push_blocked_env.md  project_roadmap_workflow.md  project_step7_s3_false_premise.md
.claude/agent-memory/qa-reviewer/: MEMORY.md  api_doc_accuracy_review.md  docs_change_review.md  openspec_removed_block_form.md  openspec_workflow.md  readme_aws_first_review.md  s3_stub_drift_false_premise.md  spec_delta_capability_targeting.md
.claude/agent-memory/spec-writer/: MEMORY.md  project_etapa1_adapter_removal.md  project_openspec_convention.md
.claude/agent-memory/test-engineer/: MEMORY.md  project_contract_test_pattern.md  project_test_stack.md
.claude/agents/: implementer.md  orchestrator.md  qa-reviewer.md  spec-writer.md  test-engineer.md
.github/: dependabot.yml
.github/workflows/: ci.yml  examples-kanban-rebase.yml  setup-repo.yml
.opencode/commands/: hexagonal-fastapi.md
.opencode/skills/fastapi-hexagonal-architecture/: SKILL.md
alembic/: README  env.py  migration_helpers.py
alembic/versions/: 20260413_0001_kanban_baseline.py  20260427_0002_persistence_concurrency_constraints.py  20260505_0003_auth_rbac.py  20260509_0004_kanban_audit_columns.py  20260509_0005_kanban_soft_delete.py  20260509_0006_rebac_drop_rbac_add_relationships.py  20260510_0007_relationships_table_moves_to_platform.py  20260511_0008_template_things_table.py  20260512_0009_credentials_table.py  20260513_0010_drop_users_password_hash.py  20260514_0011_drop_template_things.py  20260515_0012_outbox_messages.py  20260516_0013_outbox_dispatch_idempotency.py  20260517_0014_outbox_pending_index_tiebreaker.py  20260518_0015_users_created_at_index.py  20260519_0016_users_is_erased.py  20260520_0017_outbox_trace_context.py
docs/: api.md  architecture.md  background-jobs.md  development.md  email.md  feature-template.md  file-storage.md  observability.md  operations.md  outbox.md  user-guide.md
kanban/: card_move_specifications.py  repository.py  result.py  router.py  schemas.py  specification.py  sqlite_repository.py  sqlmodel_models.py  store.py
openspec/: config.yaml
openspec/changes/add-error-reporting-seam/: design.md  proposal.md  tasks.md
openspec/changes/add-first-party-auth-rbac/: design.md  proposal.md  tasks.md
openspec/changes/add-gdpr-erasure-and-export/: proposal.md  tasks.md
openspec/changes/add-graceful-shutdown/: design.md  proposal.md  tasks.md
openspec/changes/add-outbox-pattern/: tasks.md
openspec/changes/add-outbox-retention-prune/: tasks.md
openspec/changes/add-readiness-probe/: design.md  tasks.md
openspec/changes/add-s3-and-resend-adapters/: design.md  proposal.md  tasks.md
openspec/changes/add-stable-problem-types/: design.md  tasks.md
openspec/changes/add-worker-image-target/: design.md  tasks.md
openspec/changes/align-error-class-hierarchy/: design.md  tasks.md
openspec/changes/clean-architecture-seams/: tasks.md
openspec/changes/clean-user-assets-on-deactivate/: design.md  tasks.md
openspec/changes/clear-refresh-cookie-on-self-deactivate/: design.md  tasks.md
openspec/changes/declare-error-responses-in-openapi/: tasks.md
openspec/changes/decouple-authz-from-features/: proposal.md  tasks.md
openspec/changes/document-arq-result-retention/: tasks.md
openspec/changes/document-one-way-migration-policy/: design.md  proposal.md  tasks.md
openspec/changes/enable-strict-mypy/: design.md  tasks.md
scripts/: docker-smoke.sh  migration-check.sh
src/: __init__.py  conftest.py  main.py  worker.py
src/api/: __init__.py  dependencies.py  error_handlers.py  kanban_router.py  root_router.py
src/app_platform/: __init__.py
src/application/: __init__.py  commands.py  queries.py  use_cases.py
src/cli/: __init__.py  create_super_admin.py  outbox_prune.py
src/config/: settings.py
src/domain/: __init__.py
src/features/: __init__.py
src/infrastructure/: __init__.py
src/platform/: __init__.py
tests/: conftest.py
tests/architecture/: __init__.py  conftest.py  test_application_shared_is_aggregate_neutral.py  test_dependency_direction.py  test_di_no_unconsumed_compat_aliases.py  test_domain_invariants.py  test_domain_shared_is_aggregate_neutral.py  test_inbound_does_not_import_domain_exceptions.py  test_naming_conventions.py  test_no_aggregator_ports.py  test_no_repository_aggregator_ports.py  test_outbound_topology.py  test_pydantic_confined_to_api.py  test_routes_thinness.py  test_skill_checklist_coverage.py  test_use_case_cohesion.py  test_use_case_no_fastapi.py  test_use_cases_have_no_handle_passthrough.py
tests/e2e/: conftest.py  test_running_server_contracts.py
tests/integration/: conftest.py  test_api_hardening.py  test_kanban_api.py  test_observability.py  test_persistence_constraints.py  test_problem_details_rfc9457.py  test_write_api_key_auth.py
tests/quality/: test_migration_policy.py
tests/support/: __init__.py  fakes.py  kanban_builders.py
tests/unit/: conftest.py  test_alembic_configuration.py  test_api_error_mapping.py  test_application_error_resilience.py  test_card_movement_service.py  test_get_card_query.py  test_hexagonal_boundaries.py  test_infrastructure_mappers.py  test_kanban_command_handlers.py  test_kanban_cqrs.py  test_kanban_errors.py  test_kanban_repository_contract.py  test_kanban_schemas.py  test_kanban_store.py  test_kanban_use_cases.py  test_lifespan.py  test_project_tooling.py  test_repository_selection.py  test_result.py  test_specification_pattern.py  test_transaction_boundaries.py
(+1593 files in other folders)
