[project]
name = "starter-template-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic~=1.18",
    "argon2-cffi~=25.1",
    "cachetools~=5.3",
    "fastapi~=0.135",
    "opentelemetry-exporter-otlp-proto-http>=1.33.0",
    "opentelemetry-instrumentation-fastapi>=0.54b0",
    "opentelemetry-instrumentation-redis>=0.54b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.54b0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg[binary]~=3.3",
    "pydantic~=2.10",
    "pydantic-settings~=2.13",
    "pyjwt~=2.12",
    "redis~=7.4",
    "sqlmodel~=0.0.38",
    "uvicorn[standard]~=0.44",
]

[dependency-groups]
dev = [
    "fakeredis>=2.35.1",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "import-linter>=2.1",
    "mypy>=1.18.2",
    "polyfactory>=3.3.0",
    "pre-commit>=4.3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "pytest-randomly>=4.1.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.14.0",
    "testcontainers[postgresql]>=4.14.2",
    "pip-audit>=2.7.0",
    "types-cachetools>=5.3",
    "lupa>=2.2",
]

[tool.fastapi]
entrypoint = "src.main:app"

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast, no IO",
    "integration: requires docker / external services",
    "e2e: full flow through HTTP layer",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    # pytest-randomly: deterministic-by-default, override with `--randomly-seed=...`
    "-p", "randomly",
]
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/**/tests/**",
    "src/**/conftest.py",
    "src/conftest.py",
    "src/main.py",
]
data_file = ".coverage"

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
precision = 2
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
    "\\.\\.\\.\\s*$",
]

[tool.coverage.html]
directory = "reports/coverage"
title = "starter-template-fastapi coverage"
show_contexts = true

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.coverage.json]
output = "reports/coverage.json"
pretty_print = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
exclude = [
    "**/tests/**",
    "**/conftest.py",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.12"
files = ["."]
exclude = ["^openspec/", "^\\.cursor/"]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.importlinter]
root_packages = ["src"]
include_external_packages = true

# Platform must never depend on a feature.
[[tool.importlinter.contracts]]
name = "Platform isolation: no feature imports"
type = "forbidden"
source_modules = ["src.platform"]
forbidden_modules = ["src.features"]

# === Auth ↔ Authorization split ===
#
# After ``split-authentication-and-authorization`` the two features
# communicate only through ports defined on the authorization side and
# implemented on the auth side. Neither feature's production code may
# import the other's packages directly. Test trees stay out of scope
# because they construct integration-style fixtures that legitimately
# wire both halves; the contract guards production code.
[[tool.importlinter.contracts]]
name = "Authentication does not import authorization"
type = "forbidden"
source_modules = [
    "src.features.authentication.application",
    "src.features.authentication.adapters",
    "src.features.authentication.composition",
    "src.features.authentication.domain",
]
forbidden_modules = ["src.features.authorization"]

[[tool.importlinter.contracts]]
name = "Authorization does not import authentication"
type = "forbidden"
source_modules = [
    "src.features.authorization.application",
    "src.features.authorization.adapters",
    "src.features.authorization.composition",
]
forbidden_modules = ["src.features.authentication"]

# === Auth feature contracts ===

# Domain purity: no application, adapters, framework, or other feature imports.
[[tool.importlinter.contracts]]
name = "Authentication domain: pure"
type = "forbidden"
source_modules = ["src.features.authentication.domain"]
forbidden_modules = [
    "src.features.authentication.application",
    "src.features.authentication.adapters",
    "src.features.authentication.composition",
    "src.platform.api",
    "src.platform.persistence",
    "src.platform.config",
    "fastapi",
    "starlette",
    "sqlmodel",
    "sqlalchemy",
    "uvicorn",
    "httpx",
    "alembic",
    "pydantic_settings",
    "psycopg",
    "pydantic",
]

# Application: no adapters/composition/api/framework. Pydantic allowed for DTOs.
# allow_indirect_imports=true because jwt_tokens.py depends on platform.config.settings
# which pulls in pydantic_settings transitively — that transitive dependency is acceptable.
[[tool.importlinter.contracts]]
name = "Authentication application: framework-free"
type = "forbidden"
source_modules = ["src.features.authentication.application"]
allow_indirect_imports = true
forbidden_modules = [
    "src.features.authentication.adapters",
    "src.features.authentication.composition",
    "src.platform.api",
    "src.platform.persistence",
    "fastapi",
    "starlette",
    "sqlmodel",
    "sqlalchemy",
    "uvicorn",
    "httpx",
    "alembic",
    "pydantic_settings",
    "psycopg",
]

# Inbound adapters do not reach into outbound adapters or domain directly.
[[tool.importlinter.contracts]]
name = "Authentication inbound adapter: no outbound bypass"
type = "forbidden"
source_modules = ["src.features.authentication.adapters.inbound"]
allow_indirect_imports = true
forbidden_modules = [
    "src.features.authentication.adapters.outbound",
    "src.features.authentication.domain",
    "sqlmodel",
    "sqlalchemy",
    "alembic",
    "uvicorn",
    "psycopg",
]

# Inward dependency direction inside Auth.
[[tool.importlinter.contracts]]
name = "Authentication inward dependency direction"
type = "layers"
layers = [
    "src.features.authentication.adapters",
    "src.features.authentication.application",
    "src.features.authentication.domain",
]

# === Authorization feature contracts ===

# Application layer of authorization stays framework-free. The
# in-memory engine and registry are pure Python; adapters and platform
# infrastructure live elsewhere.
[[tool.importlinter.contracts]]
name = "Authorization application: framework-free"
type = "forbidden"
source_modules = ["src.features.authorization.application"]
allow_indirect_imports = true
forbidden_modules = [
    "src.features.authorization.adapters",
    "src.features.authorization.composition",
    "src.platform.api",
    "fastapi",
    "starlette",
    "sqlmodel",
    "sqlalchemy",
    "uvicorn",
    "httpx",
    "alembic",
    "pydantic_settings",
    "psycopg",
]

# Inward dependency direction inside Authorization (no domain layer; the
# application package is the inner ring).
[[tool.importlinter.contracts]]
name = "Authorization inward dependency direction"
type = "layers"
layers = [
    "src.features.authorization.adapters",
    "src.features.authorization.application",
]
