[project]
name = "starter-template-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic~=1.18",
    "argon2-cffi~=25.1",
    "arq~=0.26",
    "cachetools~=5.3",
    "fastapi~=0.135",
    "jinja2~=3.1",
    "opentelemetry-exporter-otlp-proto-http>=1.33.0",
    "opentelemetry-instrumentation-fastapi>=0.54b0",
    "opentelemetry-instrumentation-redis>=0.54b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.54b0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg[binary]~=3.3",
    "pydantic~=2.10",
    "pydantic-settings~=2.13",
    "pyjwt~=2.12",
    "python-multipart~=0.0.20",
    "redis>=5.0,<6",
    "sqlmodel~=0.0.38",
    "uvicorn[standard]~=0.44",
]

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "fakeredis>=2.35.1",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "import-linter>=2.1",
    "mypy>=1.18.2",
    "polyfactory>=3.3.0",
    "pre-commit>=4.3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "pytest-randomly>=4.1.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.14.0",
    "testcontainers[postgresql]>=4.14.2",
    "pip-audit>=2.7.0",
    "types-cachetools>=5.3",
    "lupa>=2.2",
]

[tool.fastapi]
entrypoint = "src.main:app"

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast, no IO",
    "integration: requires docker / external services",
    "e2e: full flow through HTTP layer",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    # pytest-randomly: deterministic-by-default, override with `--randomly-seed=...`
    "-p", "randomly",
]
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/**/tests/**",
    "src/**/conftest.py",
    "src/conftest.py",
    "src/main.py",
]
data_file = ".coverage"

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
precision = 2
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
    "\\.\\.\\.\\s*$",
]

[tool.coverage.html]
directory = "reports/coverage"
title = "starter-template-fastapi coverage"
show_contexts = true

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.coverage.json]
output = "reports/coverage.json"
pretty_print = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
exclude = [
    "**/tests/**",
    "**/conftest.py",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.12"
files = ["."]
exclude = ["^openspec/", "^\\.cursor/"]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.importlinter]
root_packages = ["src"]
include_external_packages = true

# Platform must never depend on a feature.
#
# The one tolerated exception is the configuration composition root:
# :mod:`src.platform.config.settings` aggregates per-feature settings
# classes so each feature can own its config and production validation
# alongside its other code. Every *other* platform module remains
# feature-agnostic.
[[tool.importlinter.contracts]]
name = "Platform isolation: no feature imports"
type = "forbidden"
source_modules = ["src.platform"]
forbidden_modules = ["src.features"]
ignore_imports = [
    "src.platform.config.settings -> src.features.authentication.composition.settings",
    "src.platform.config.settings -> src.features.authorization.composition.settings",
    "src.platform.config.settings -> src.features.background_jobs.composition.settings",
    "src.platform.config.settings -> src.features.email.composition.settings",
    "src.platform.config.settings -> src.features.file_storage.composition.settings",
    "src.platform.config.settings -> src.features.users.composition.settings",
]

# === Auth ↔ Authorization split ===
#
# After ``split-authentication-and-authorization`` the two features
# communicate only through ports defined on the authorization side and
# implemented on the auth side. Neither feature's production code may
# import the other's packages directly. Test trees stay out of scope
# because they construct integration-style fixtures that legitimately
# wire both halves; the contract guards production code.
[[tool.importlinter.contracts]]
name = "Authentication does not import authorization"
type = "forbidden"
source_modules = [
    "src.features.authentication.application",
    "src.features.authentication.adapters",
    "src.features.authentication.composition",
    "src.features.authentication.domain",
]
forbidden_modules = ["src.features.authorization"]
# The configuration composition root aggregates per-feature settings
# classes (see the matching ignore in "Platform isolation" above). The
# transitive ``platform.config.settings -> authorization.composition.settings``
# edge is not a feature-to-feature dependency, so it does not violate
# the spirit of this contract.
ignore_imports = [
    "src.platform.config.settings -> src.features.authorization.composition.settings",
]

[[tool.importlinter.contracts]]
name = "Authorization does not import authentication"
type = "forbidden"
source_modules = [
    "src.features.authorization.application",
    "src.features.authorization.adapters",
    "src.features.authorization.composition",
]
forbidden_modules = ["src.features.authentication"]

# === Auth feature contracts ===

# Domain purity: no application, adapters, framework, or other feature imports.
[[tool.importlinter.contracts]]
name = "Authentication domain: pure"
type = "forbidden"
source_modules = ["src.features.authentication.domain"]
forbidden_modules = [
    "src.features.authentication.application",
    "src.features.authentication.adapters",
    "src.features.authentication.composition",
    "src.platform.api",
    "src.platform.persistence",
    "src.platform.config",
    "fastapi",
    "starlette",
    "sqlmodel",
    "sqlalchemy",
    "uvicorn",
    "httpx",
    "alembic",
    "pydantic_settings",
    "psycopg",
    "pydantic",
]

# Application: no adapters/composition/api/framework. Pydantic allowed for DTOs.
# allow_indirect_imports=true because jwt_tokens.py depends on platform.config.settings
# which pulls in pydantic_settings transitively — that transitive dependency is acceptable.
[[tool.importlinter.contracts]]
name = "Authentication application: framework-free"
type = "forbidden"
source_modules = ["src.features.authentication.application"]
allow_indirect_imports = true
forbidden_modules = [
    "src.features.authentication.adapters",
    "src.features.authentication.composition",
    "src.platform.api",
    "src.platform.persistence",
    "fastapi",
    "starlette",
    "sqlmodel",
    "sqlalchemy",
    "uvicorn",
    "httpx",
    "alembic",
    "pydantic_settings",
    "psycopg",
]

# Inbound adapters do not reach into outbound adapters or domain directly.
[[tool.importlinter.contracts]]
name = "Authentication inbound adapter: no outbound bypass"
type = "forbidden"
source_modules = ["src.features.authentication.adapters.inbound"]
allow_indirect_imports = true
forbidden_modules = [
    "src.features.authentication.adapters.outbound",
    "src.features.authentication.domain",
    "sqlmodel",
    "sqlalchemy",
    "alembic",
    "uvicorn",
    "psycopg",
]

# Inward dependency direction inside Auth.
[[tool.importlinter.contracts]]
name = "Authentication inward dependency direction"
type = "layers"
layers = [
    "src.features.authentication.adapters",
    "src.features.authentication.application",
    "src.features.authentication.domain",
]

# === Authorization feature contracts ===

# Application layer of authorization stays framework-free. The
# in-memory engine and registry are pure Python; adapters and platform
# infrastructure live elsewhere.
[[tool.importlinter.contracts]]
name = "Authorization application: framework-free"
type = "forbidden"
source_modules = ["src.features.authorization.application"]
allow_indirect_imports = true
forbidden_modules = [
    "src.features.authorization.adapters",
    "src.features.authorization.composition",
    "src.platform.api",
    "fastapi",
    "starlette",
    "sqlmodel",
    "sqlalchemy",
    "uvicorn",
    "httpx",
    "alembic",
    "pydantic_settings",
    "psycopg",
]

# Inward dependency direction inside Authorization (no domain layer; the
# application package is the inner ring).
[[tool.importlinter.contracts]]
name = "Authorization inward dependency direction"
type = "layers"
layers = [
    "src.features.authorization.adapters",
    "src.features.authorization.application",
]

# === Users feature boundaries ===
#
# After the ``starter-template-foundation`` extraction, ``users`` owns the
# ``User`` table and its lifecycle. It must not import from ``authentication``
# (the dependency goes the other way: authentication consumes ``UserPort``).
[[tool.importlinter.contracts]]
name = "Users does not import from authentication"
type = "forbidden"
source_modules = [
    "src.features.users.application",
    "src.features.users.adapters",
    "src.features.users.domain",
]
forbidden_modules = ["src.features.authentication"]

# Authentication production code uses ``users`` only through its application
# ports (``UserPort``, ``PasswordHasherPort``). Reaching into users' adapters
# would bypass the contract.
[[tool.importlinter.contracts]]
name = "Authentication uses users only via application ports"
type = "forbidden"
source_modules = [
    "src.features.authentication.application",
    "src.features.authentication.adapters",
    "src.features.authentication.domain",
]
forbidden_modules = ["src.features.users.adapters"]

# Users implements outbound ports defined by authorization; the implementations
# live in adapters and may not reach back into authorization's adapter package.
[[tool.importlinter.contracts]]
name = "Users does not import authorization adapters"
type = "forbidden"
source_modules = [
    "src.features.users.application",
    "src.features.users.adapters",
    "src.features.users.domain",
]
forbidden_modules = ["src.features.authorization.adapters"]

# === Email feature boundaries ===
#
# The email feature owns its port, adapters, and template registry. It must
# never import from another feature — features deliver mail by registering
# their templates with the email registry and calling ``EmailPort.send``.
[[tool.importlinter.contracts]]
name = "Email does not import from other features"
type = "forbidden"
source_modules = [
    "src.features.email.application",
    "src.features.email.adapters",
    "src.features.email.domain",
    "src.features.email.composition",
]
forbidden_modules = [
    "src.features.authentication",
    "src.features.authorization",
    "src.features.users",
    "src.features._template",
]

# Authentication consumes the email feature only through ``EmailPort``;
# direct imports of an email adapter would bypass the contract.
[[tool.importlinter.contracts]]
name = "Authentication uses email only via the port"
type = "forbidden"
source_modules = [
    "src.features.authentication.application",
    "src.features.authentication.adapters",
    "src.features.authentication.domain",
]
forbidden_modules = ["src.features.email.adapters"]

# === Background-jobs feature boundaries ===
#
# The background-jobs feature owns its port, adapters, and handler registry.
# It must never import from another feature — features contribute their job
# handlers by registering them with the registry at composition time and
# call ``JobQueuePort.enqueue`` to dispatch work.
[[tool.importlinter.contracts]]
name = "Background-jobs does not import from other features"
type = "forbidden"
source_modules = [
    "src.features.background_jobs.application",
    "src.features.background_jobs.adapters",
    "src.features.background_jobs.domain",
    "src.features.background_jobs.composition",
]
forbidden_modules = [
    "src.features.authentication",
    "src.features.authorization",
    "src.features.users",
    "src.features.email",
    "src.features._template",
]

# Authentication consumes the background-jobs feature only through
# ``JobQueuePort``; direct imports of a job-queue adapter would bypass
# the contract.
[[tool.importlinter.contracts]]
name = "Authentication uses background-jobs only via the port"
type = "forbidden"
source_modules = [
    "src.features.authentication.application",
    "src.features.authentication.adapters",
    "src.features.authentication.domain",
]
forbidden_modules = ["src.features.background_jobs.adapters"]

# === File-storage feature boundaries ===
#
# The file-storage feature owns its port and adapters. It must never
# import from another feature — features that need persistent blobs
# call ``FileStoragePort`` instead of importing an adapter directly.
[[tool.importlinter.contracts]]
name = "File-storage does not import from other features"
type = "forbidden"
source_modules = [
    "src.features.file_storage.application",
    "src.features.file_storage.adapters",
    "src.features.file_storage.domain",
    "src.features.file_storage.composition",
]
forbidden_modules = [
    "src.features.authentication",
    "src.features.authorization",
    "src.features.users",
    "src.features.email",
    "src.features.background_jobs",
    "src.features._template",
]
