[project]
name = "starter-template-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic~=1.18",
    "argon2-cffi~=25.1",
    "arq~=0.26",
    "boto3~=1.34",
    "cachetools~=5.3",
    "fastapi~=0.135",
    "httpx>=0.28.1",
    "jinja2~=3.1",
    "opentelemetry-exporter-otlp-proto-http>=1.33.0",
    "opentelemetry-instrumentation-fastapi>=0.54b0",
    "opentelemetry-instrumentation-httpx>=0.54b0",
    "opentelemetry-instrumentation-redis>=0.54b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.54b0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg[binary]~=3.3",
    "pydantic~=2.10",
    "pydantic-settings~=2.13",
    "pyjwt~=2.12",
    "python-multipart~=0.0.20",
    "redis>=5.0,<6",
    "sqlmodel~=0.0.38",
    "uvicorn[standard]~=0.44",
]

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "fakeredis>=2.35.1",
    "fastapi[standard]~=0.135",
    "freezegun>=1.5.5",
    "import-linter>=2.1",
    "moto~=5.0",
    "mypy>=1.18.2",
    "polyfactory>=3.3.0",
    "pre-commit>=4.3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "pytest-randomly>=4.1.0",
    "pytest-sugar>=1.1.1",
    "respx>=0.21",
    "ruff>=0.14.0",
    "testcontainers[postgresql]>=4.14.2",
    "pip-audit>=2.7.0",
    "types-cachetools>=5.3",
    "boto3-stubs[s3]>=1.34",
    "lupa>=2.2",
]

[tool.fastapi]
entrypoint = "main:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast, no IO",
    "integration: requires docker / external services",
    "e2e: full flow through HTTP layer",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    # pytest-randomly: deterministic-by-default, override with `--randomly-seed=...`
    "-p", "randomly",
]
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
# Branch coverage is measured in addition to statement coverage. Note: pytest-cov
# only emits branch data when invoked with --cov-branch; the Makefile passes that
# flag on every coverage-producing target.
branch = true
omit = [
    "src/**/tests/**",
    "src/**/conftest.py",
    "src/conftest.py",
    "src/main.py",
]
data_file = ".coverage"

[tool.coverage.report]
# Statement (line) coverage floor; the separate BRANCH floor is enforced by the
# Makefile (BRANCH_COVERAGE_FLOOR) so the two signals stay distinct in CI output.
fail_under = 80
show_missing = true
skip_covered = false
precision = 2
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
    "\\.\\.\\.\\s*$",
]

[tool.coverage.html]
directory = "reports/coverage"
title = "starter-template-fastapi coverage"
show_contexts = true

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.coverage.json]
output = "reports/coverage.json"
pretty_print = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
exclude = [
    "**/tests/**",
    "**/conftest.py",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "S",
    "C4",
    "RUF",
    "SIM",
    "PT",
    "TRY",
    "RET",
    "ARG",
    "DTZ",
    "ASYNC",
    "PERF",
    "PL",
]
extend-ignore = [
    "TRY003",
    "PLC0415",
    "PLR0911",
    "PLR0913",
    "PLR0915",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S105", "S106", "S107", "S301", "S311", "ARG", "PLR2004", "DTZ001"]
"**/conftest.py" = ["S101", "S105", "S106", "S107", "S301", "S311", "ARG", "PLR2004", "DTZ001"]
"src/features/**/adapters/outbound/persistence/sqlmodel/models.py" = ["RUF012"]
"alembic/versions/*.py" = ["ALL"]

[tool.mypy]
python_version = "3.12"
files = ["."]
exclude = ["^openspec/", "^\\.cursor/"]
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.importlinter]
root_packages = ["app_platform", "features", "cli"]
include_external_packages = true

# Platform must never depend on a feature.
#
# The one tolerated exception is the configuration composition root:
# :mod:`app_platform.config.settings` aggregates per-feature settings
# classes so each feature can own its config and production validation
# alongside its other code. Every *other* platform module remains
# feature-agnostic.
[[tool.importlinter.contracts]]
name = "Platform isolation: no feature imports"
type = "forbidden"
source_modules = ["app_platform"]
forbidden_modules = ["features"]
ignore_imports = [
    "app_platform.config.settings -> features.authentication.composition.settings",
    "app_platform.config.settings -> features.authorization.composition.settings",
    "app_platform.config.settings -> features.background_jobs.composition.settings",
    "app_platform.config.settings -> features.email.composition.settings",
    "app_platform.config.settings -> features.file_storage.composition.settings",
    "app_platform.config.settings -> features.outbox.composition.settings",
    "app_platform.config.settings -> features.users.composition.settings",
]

# === Auth ↔ Authorization split ===
#
# After ``split-authentication-and-authorization`` the two features
# communicate only through ports defined on the authorization side and
# implemented on the auth side. Neither feature's production code may
# import the other's packages directly. Test trees stay out of scope
# because they construct integration-style fixtures that legitimately
# wire both halves; the contract guards production code.
[[tool.importlinter.contracts]]
name = "Authentication does not import authorization"
type = "forbidden"
source_modules = [
    "features.authentication.application",
    "features.authentication.adapters",
    "features.authentication.composition",
    "features.authentication.domain",
]
forbidden_modules = ["features.authorization"]
# The configuration composition root aggregates per-feature settings
# classes (see the matching ignore in "Platform isolation" above). The
# transitive ``platform.config.settings -> authorization.composition.settings``
# edge is not a feature-to-feature dependency, so it does not violate
# the spirit of this contract.
ignore_imports = [
    "app_platform.config.settings -> features.authorization.composition.settings",
]

[[tool.importlinter.contracts]]
name = "Authorization does not import authentication"
type = "forbidden"
source_modules = [
    "features.authorization.application",
    "features.authorization.adapters",
    "features.authorization.composition",
]
forbidden_modules = ["features.authentication"]

# === Auth feature contracts ===

# Domain purity: no application, adapters, framework, or other feature imports.
[[tool.importlinter.contracts]]
name = "Authentication domain: pure"
type = "forbidden"
source_modules = ["features.authentication.domain"]
forbidden_modules = [
    "features.authentication.application",
    "features.authentication.adapters",
    "features.authentication.composition",
    "app_platform.api",
    "app_platform.persistence",
    "app_platform.config",
    "fastapi",
    "starlette",
    "sqlmodel",
    "sqlalchemy",
    "uvicorn",
    "httpx",
    "alembic",
    "pydantic_settings",
    "psycopg",
    "pydantic",
]

# Application: no adapters/composition/api/framework. Pydantic allowed for DTOs.
# allow_indirect_imports=true because jwt_tokens.py depends on platform.config.settings
# which pulls in pydantic_settings transitively — that transitive dependency is acceptable.
[[tool.importlinter.contracts]]
name = "Authentication application: framework-free"
type = "forbidden"
source_modules = ["features.authentication.application"]
allow_indirect_imports = true
forbidden_modules = [
    "features.authentication.adapters",
    "features.authentication.composition",
    "app_platform.api",
    "app_platform.persistence",
    "fastapi",
    "starlette",
    "sqlmodel",
    "sqlalchemy",
    "uvicorn",
    "httpx",
    "alembic",
    "pydantic_settings",
    "psycopg",
]

# Inbound adapters do not reach into outbound adapters or domain directly.
[[tool.importlinter.contracts]]
name = "Authentication inbound adapter: no outbound bypass"
type = "forbidden"
source_modules = ["features.authentication.adapters.inbound"]
allow_indirect_imports = true
forbidden_modules = [
    "features.authentication.adapters.outbound",
    "features.authentication.domain",
    "sqlmodel",
    "sqlalchemy",
    "alembic",
    "uvicorn",
    "psycopg",
]

# Inward dependency direction inside Auth.
[[tool.importlinter.contracts]]
name = "Authentication inward dependency direction"
type = "layers"
layers = [
    "features.authentication.adapters",
    "features.authentication.application",
    "features.authentication.domain",
]

# === Authorization feature contracts ===

# Application layer of authorization stays framework-free. The
# in-memory engine and registry are pure Python; adapters and platform
# infrastructure live elsewhere.
[[tool.importlinter.contracts]]
name = "Authorization application: framework-free"
type = "forbidden"
source_modules = ["features.authorization.application"]
allow_indirect_imports = true
forbidden_modules = [
    "features.authorization.adapters",
    "features.authorization.composition",
    "app_platform.api",
    "fastapi",
    "starlette",
    "sqlmodel",
    "sqlalchemy",
    "uvicorn",
    "httpx",
    "alembic",
    "pydantic_settings",
    "psycopg",
]

# Inward dependency direction inside Authorization (no domain layer; the
# application package is the inner ring).
[[tool.importlinter.contracts]]
name = "Authorization inward dependency direction"
type = "layers"
layers = [
    "features.authorization.adapters",
    "features.authorization.application",
]

# === Users feature boundaries ===
#
# After the ``starter-template-foundation`` extraction, ``users`` owns the
# ``User`` table and its lifecycle. It must not import from ``authentication``
# (the dependency goes the other way: authentication consumes ``UserPort``).
[[tool.importlinter.contracts]]
name = "Users does not import from authentication"
type = "forbidden"
source_modules = [
    "features.users.application",
    "features.users.adapters",
    "features.users.domain",
]
forbidden_modules = ["features.authentication"]

# Authentication production code uses ``users`` only through its application
# ports (``UserPort``, ``PasswordHasherPort``). Reaching into users' adapters
# would bypass the contract.
[[tool.importlinter.contracts]]
name = "Authentication uses users only via application ports"
type = "forbidden"
source_modules = [
    "features.authentication.application",
    "features.authentication.adapters",
    "features.authentication.domain",
]
forbidden_modules = ["features.users.adapters"]

# Users implements outbound ports defined by authorization; the implementations
# live in adapters and may not reach back into authorization's adapter package.
[[tool.importlinter.contracts]]
name = "Users does not import authorization adapters"
type = "forbidden"
source_modules = [
    "features.users.application",
    "features.users.adapters",
    "features.users.domain",
]
forbidden_modules = ["features.authorization.adapters"]

# === Email feature boundaries ===
#
# The email feature owns its port, adapters, and template registry. It must
# never import from another feature — features deliver mail by registering
# their templates with the email registry and calling ``EmailPort.send``.
[[tool.importlinter.contracts]]
name = "Email does not import from other features"
type = "forbidden"
source_modules = [
    "features.email.application",
    "features.email.adapters",
    "features.email.domain",
    "features.email.composition",
]
forbidden_modules = [
    "features.authentication",
    "features.authorization",
    "features.users",
]

# Authentication consumes the email feature only through ``EmailPort``;
# direct imports of an email adapter would bypass the contract.
[[tool.importlinter.contracts]]
name = "Authentication uses email only via the port"
type = "forbidden"
source_modules = [
    "features.authentication.application",
    "features.authentication.adapters",
    "features.authentication.domain",
]
forbidden_modules = ["features.email.adapters"]

# === Background-jobs feature boundaries ===
#
# The background-jobs feature owns its port, adapters, and handler registry.
# It must never import from another feature — features contribute their job
# handlers by registering them with the registry at composition time and
# call ``JobQueuePort.enqueue`` to dispatch work.
[[tool.importlinter.contracts]]
name = "Background-jobs does not import from other features"
type = "forbidden"
source_modules = [
    "features.background_jobs.application",
    "features.background_jobs.adapters",
    "features.background_jobs.domain",
    "features.background_jobs.composition",
]
forbidden_modules = [
    "features.authentication",
    "features.authorization",
    "features.users",
    "features.email",
]

# Authentication consumes the background-jobs feature only through
# ``JobQueuePort``; direct imports of a job-queue adapter would bypass
# the contract.
[[tool.importlinter.contracts]]
name = "Authentication uses background-jobs only via the port"
type = "forbidden"
source_modules = [
    "features.authentication.application",
    "features.authentication.adapters",
    "features.authentication.domain",
]
forbidden_modules = ["features.background_jobs.adapters"]

# === File-storage feature boundaries ===
#
# The file-storage feature owns its port and adapters. It must never
# import from another feature — features that need persistent blobs
# call ``FileStoragePort`` instead of importing an adapter directly.
[[tool.importlinter.contracts]]
name = "File-storage does not import from other features"
type = "forbidden"
source_modules = [
    "features.file_storage.application",
    "features.file_storage.adapters",
    "features.file_storage.domain",
    "features.file_storage.composition",
]
forbidden_modules = [
    "features.authentication",
    "features.authorization",
    "features.users",
    "features.email",
    "features.background_jobs",
]

# === Outbox feature boundaries ===
#
# The outbox feature owns its port, its table, and its relay use case.
# It must never import from another feature — producer features call
# ``OutboxPort`` (composed by the outbox container) and the relay
# composes ``JobQueuePort`` from its constructor argument.
[[tool.importlinter.contracts]]
name = "Outbox does not import from other features"
type = "forbidden"
source_modules = [
    "features.outbox.application",
    "features.outbox.adapters",
    "features.outbox.domain",
    "features.outbox.composition",
]
forbidden_modules = [
    "features.authentication",
    "features.authorization",
    "features.users",
    "features.email",
    "features.file_storage",
]

# The dispatch use case depends on ``JobQueuePort`` (an inbound
# Protocol) but the outbox feature must not reach into the background-
# jobs *adapters*. Keeping this rule explicit prevents a regression where
# the relay accidentally couples to a specific queue backend.
[[tool.importlinter.contracts]]
name = "Outbox does not import background-jobs adapters"
type = "forbidden"
source_modules = [
    "features.outbox.application",
    "features.outbox.adapters",
    "features.outbox.domain",
]
forbidden_modules = ["features.background_jobs.adapters"]

# === Application ↛ Composition (any feature) ===
#
# Composition is the outermost ring; application is the inner ring that
# contains use cases and ports. An application-layer module importing a
# composition-layer module — even its own feature's — inverts the
# layering. Cross-feature constants needed by application code (job
# names, template names, registry keys) live in the producing feature's
# application layer, never in its composition layer.
#
# ``allow_indirect_imports = true`` because every application module
# transitively reaches ``app_platform.config.settings``, which by design
# aggregates per-feature ``composition.settings`` projections (see the
# explicit ignore on "Platform isolation: no feature imports"). The
# transitive ``application -> platform.config.settings -> *.composition.settings``
# edge is the same well-understood exception, not a real layering
# violation.
[[tool.importlinter.contracts]]
name = "Application does not import composition (any feature)"
type = "forbidden"
allow_indirect_imports = true
source_modules = [
    "features.authentication.application",
    "features.authorization.application",
    "features.background_jobs.application",
    "features.email.application",
    "features.file_storage.application",
    "features.outbox.application",
    "features.users.application",
]
forbidden_modules = [
    "features.authentication.composition",
    "features.authorization.composition",
    "features.background_jobs.composition",
    "features.email.composition",
    "features.file_storage.composition",
    "features.outbox.composition",
    "features.users.composition",
]

# === Outbox port consumers do not import sqlmodel ===
#
# Producer features depend on the abstract ``OutboxUnitOfWorkPort``
# rather than on a ``Callable[[Session], OutboxPort]``-shaped factory.
# This contract prevents future producer composition modules from
# accidentally re-introducing the ``sqlmodel.Session`` leak through the
# auth feature's seam.
[[tool.importlinter.contracts]]
name = "Outbox port consumers do not import sqlmodel"
type = "forbidden"
source_modules = [
    "features.authentication.application",
    "features.authentication.composition",
]
forbidden_modules = ["sqlmodel"]
ignore_imports = [
    # The auth composition root constructs the engine-owning
    # SQLModelAuthRepository, which legitimately re-exports the
    # adapters package whose modules import sqlmodel. The Session leak
    # this contract guards against would be a direct ``from sqlmodel
    # import Session`` in composition.container itself.
    "features.authentication.composition.container -> features.authentication.adapters.outbound.persistence.sqlmodel",
]

# === Features must not import the CLI composition root ===
#
# ``src/cli/`` is a top-level composition root (peer of ``main.py`` and
# ``worker.py``). It is permitted to import every feature's composition
# layer; features must not import the CLI.
[[tool.importlinter.contracts]]
name = "Features do not import the CLI composition root"
type = "forbidden"
source_modules = [
    "features.authentication",
    "features.authorization",
    "features.background_jobs",
    "features.email",
    "features.file_storage",
    "features.outbox",
    "features.users",
]
forbidden_modules = ["cli"]
